# CMakeDebSrc

./: CMakeDebSrcConfig.cmake.in  CMakeLists.txt  README.md  pbuilderrc
example/: CMakeLists.txt
example/scripts/: opencv4-xfeatures2d-download.sh
hook.d/: C10shell  D05depends
share/cmake/CMakeDebSrc/: BuildDebSrc.cmake  ConfigureDebianDir.cmake  ConfigureProjectDir.cmake
